test/runnable/extra-files/lib10386/foo/package.d
module lib10386.foo;

public import lib10386.foo.bar;
