test/fail_compilation/imports/test314d.d
module imports.test314d;

import imports.test314imp : bar=foo;
